# Content-Suite

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  supabase_migration_001.sql  supabase_migration_002.sql  supabase_schema.sql  supabase_setup.sql
backend/models/: schemas.py
backend/routers/: audit.py  auth.py  brand.py  content.py
backend/services/: error_handlers.py  google_client.py  llm.py  rag.py  supabase_client.py  tracing.py  vision.py
frontend/: package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/content-suite/: content-suite-app.tsx  header.tsx  login-screen.tsx  sidebar.tsx
frontend/src/components/content-suite/approver-a/: history.tsx  review-inbox.tsx
frontend/src/components/content-suite/approver-b/: audit-history.tsx  visual-audit.tsx
frontend/src/components/content-suite/creator/: brand-dna-architect.tsx  creative-engine.tsx  my-generations.tsx
frontend/src/components/content-suite/shared/: brand-selector.tsx
frontend/src/lib/: api-client.ts  status.ts  types.ts
frontend/src/styles/: globals.css
